--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "lightgallery": "^2.7.2",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
