--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "lightgallery": "^2.7.2",
+    "fslightbox-react": "^1.7.6",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "photoswipe": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-photoswipe-gallery": "^3.0.1",
+    "react-spring-lightbox": "^1.8.0"
   },
   "devDependencies": {
+    "@types/fslightbox-react": "^1.7.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
